Fix ribbon alignment

--- a/theme/basic.css
+++ b/theme/basic.css
@@ -362,7 +362,7 @@ pre code {
     height: 100px;
     position: absolute;
     right: -38px;
-    top: 27px;
+    top: 22px;
     z-index: 1;
 }
 
